--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,9 @@ dependencies{
     implementation'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
     //retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    //implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
     //gson
     implementation 'com.google.code.gson:gson:2.8.5'
     //location
