--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,12 +46,12 @@ dependencies{
     implementation 'com.github.moxy-community:moxy-androidx:2.1.2'
     implementation 'com.github.moxy-community:moxy-ktx:2.1.2'
     //rxJava
-    implementation'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.2'
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
-    //implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
     //gson
     implementation 'com.google.code.gson:gson:2.8.5'
     //location
