--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 }
 
 
-dependencies{
+dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -42,6 +42,7 @@ dependencies{
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     //mvp
     implementation 'com.github.moxy-community:moxy:2.1.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt 'com.github.moxy-community:moxy-compiler:2.1.2'
     implementation 'com.github.moxy-community:moxy-androidx:2.1.2'
     implementation 'com.github.moxy-community:moxy-ktx:2.1.2'
@@ -56,4 +57,7 @@ dependencies{
     implementation 'com.google.code.gson:gson:2.8.5'
     //location
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    //bottom navigation
+    implementation 'androidx.navigation:navigation-fragment:2.2.2'
+    implementation 'androidx.navigation:navigation-ui:2.2.2'
 }
