--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'io.objectbox'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -40,6 +42,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     //mvp
     implementation 'com.github.moxy-community:moxy:2.1.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -60,4 +63,8 @@ dependencies {
     //bottom navigation
     implementation 'androidx.navigation:navigation-fragment:2.2.2'
     implementation 'androidx.navigation:navigation-ui:2.2.2'
+    //objectBox
+    implementation 'io.objectbox:objectbox-kotlin:2.3.3'
+    implementation 'io.objectbox:objectbox-android:2.3.3'
+    kapt 'io.objectbox:objectbox-processor:2.3.3'
 }
