--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.testappweatherforecast">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -12,7 +13,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <receiver
@@ -21,7 +22,8 @@
             android:exported="true">
             <intent-filter>
                 <action
-                    android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                    android:name="android.net.conn.CONNECTIVITY_CHANGE"
+                    tools:ignore="BatteryLife" />
             </intent-filter>
         </receiver>
         <receiver
@@ -30,7 +32,8 @@
             android:exported="true">
             <intent-filter>
                 <action
-                    android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                    android:name="android.net.conn.CONNECTIVITY_CHANGE"
+                    tools:ignore="BatteryLife" />
             </intent-filter>
         </receiver>
 
